#40 - Changes to POM for integration with Sonatype OSS.